--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "react-devtools": "^4.24.7"
   },
   "private": true
 }
